PLFM-9161: Additional test on delete and insert